# raytracer

./: .gitignore  Cargo.toml  README.md  serve.sh
.github/workflows-disabled/: deploy.yml
shaders/: fragment.glsl
src/: camera.rs  lib.rs  material.rs  math.rs  scene.rs  shaders.rs  webgl.rs
web/: index.html  scene_editor.html  script.js  script_new.js  script_old.js  style.css
