[package]
name = "raytracer"
version = "0.1.0"
edition = "2024"
description = "3D Raytracing engine implemented in Rust and WebAssembly with GPU acceleration"
repository = "https://github.com/Bridiro/raytracer"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3.77", features = [
    'Document',
    'Window',
    'HtmlCanvasElement',
    'WebGlRenderingContext',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlBuffer',
    'WebGlUniformLocation',
    'WebGlTexture',
    'WebGlFramebuffer',
    'console',
    'Performance',
    'KeyboardEvent',
    'MouseEvent',
    'Element',
    'HtmlInputElement',
    'File',
    'FileReader',
    'Blob',
] }
